--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -104,8 +104,8 @@
     {% block slider %}
     {% endblock %}
 
-    {% block first_time_user %}
-    {% endblock first_time_user %}
+    {# {% block first_time_user %} #}
+    {# {% endblock first_time_user %} #}
 
     {% spaceless %}
     {% block main_containter %}
