--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -104,6 +104,7 @@
   {% endif %}
 
   <!--Best masters -->
+  {% if masters %}
   <div class="one-third column">
     <h3 class="headline">Лучшие мастера</h3>
     <span class="line margin-bottom-0"></span>
@@ -122,6 +123,7 @@
       </li>
     </ul>
   </div>
+  {% endif %}
 </div>
 <div class="clearfix"></div>
 {% endblock %}
