--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -5820,7 +5820,7 @@ ul.product-list li {
 }
 
 .product-list.discount i {
-    text-decoration: line-through;
+    /* text-decoration: line-through; */
     color: #888;
     margin: 3px 0 0 0;
 }
@@ -8429,6 +8429,7 @@ html[xmlns] .slides {
     }
     .parallax-title {
         font-size: 36px;
+        line-height: 32px;
     }
     .parallax-title span {
         padding: 10px 0 0 0;
