--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -28,9 +28,8 @@
 {% endblock %}
 
 {% block main_containter %}
-
 {% if categories %}
-<div class="container fullwidth-element userpanel margin-bottom-50">
+<div class="container userpanel margin-bottom-40">
 {% for category in categories %}
     <div class="main-page-category columns">
         <a href="{{ category.get_absolute_url }}" class="img-caption">
@@ -115,7 +114,10 @@
       {% for master in masters %}
       <li><a href="{{ master.get_absolute_url }}">
 				<img src="{{ MEDIA_URL }}{% thumbnail master.image 90 90 %}" alt="{{ master.get_full_name }}" />
-				<div class="product-list-desc"><i><b>{{ master.get_full_name }}</b></i>{{ master.get_location }}</div>
+				<div class="product-list-desc">
+          <i>{{ master.get_full_name }}</i>
+          {{ master.get_location }}
+        </div>
 			</a></li>
       {% endfor %}
       <li>
@@ -243,8 +245,8 @@
           {% endif %}
       </div>
       <div class="tab-content" id="tab3" style="display: none;">
-        {% if comments %}
           <div class="widget margin-top-0">
+            {% if comments %}
             <ul class="widget-tabs">
               {% for recent_post in comments %}
               <li>
@@ -265,8 +267,10 @@
               </li>
               {% endfor %}
             </ul>
-          </div>
+          {% else %}
+          <p style="text-align:center">Комментарив нет</p>
           {% endif %}
+        </div>
       </div>
     </div>
 
