--- a/theme/templates/admin/grapelli_base.html
+++ b/theme/templates/admin/grapelli_base.html
@@ -39,17 +39,17 @@
 <div id="container">
 
     <!-- HEADER -->
-    {% if not is_popup %}
-    {% include "admin/includes_grappelli/header.html" %}
-    {% endif %}
+    {# {% if not is_popup %} #}
+    {# {% include "admin/includes_grappelli/header.html" %} #}
+    {# {% endif %} #}
 
     <!-- BREADCRUMBS -->
     {% block breadcrumbs %}<div class="breadcrumbs"><a href="/">{% trans 'Home' %}</a>{% if title %} &rsaquo; {{ title }}{% endif %}</div>{% endblock %}
 
     <!-- MESSAGES -->
-    {% if messages %}
-    <ul class="messagelist">{% for message in messages %}<li class="{{ message.tags }}">{{ message }}</li>{% endfor %}</ul>
-    {% endif %}
+    {# {% if messages %} #}
+    {# <ul class="messagelist">{% for message in messages %}<li class="{{ message.tags }}">{{ message }}</li>{% endfor %}</ul> #}
+    {# {% endif %} #}
 
     {% block before_content %}{% endblock %}
 
@@ -57,6 +57,9 @@
     <div id="content" class="{% block coltype %}colM{% endblock %}">
         {% block pretitle %}{% endblock %}
         {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+        {% if messages %}
+            <ul class="messagelist">{% for message in messages %}<li class="{{ message.tags }}">{{ message }}</li>{% endfor %}</ul>
+        {% endif %}
         {% block content %}
         {% block object-tools %}{% endblock %}
         {{ content }}
