--- a/profiles/templates/profiles/profile_settings.html
+++ b/profiles/templates/profiles/profile_settings.html
@@ -52,7 +52,7 @@
 					<div class="dropdown">
 						<button class="dropbtn"><i class="fa fa-book" aria-hidden="true"></i> Стол заказов <i class="fa fa-caret-down"></i></button>
 						<div class="dropdown-content">
-							<a href="#">Добавить новую заявку</a>
+							<a href="{% url 'ordertableitem-add' %}">Добавить новую заявку</a>
 							<a href="{{ ordertableitem_list }}">Список моих заявок</a>
 							<a href="#">Список входящих откликов</a>
 							<a href="#">Список исходящих откликов</a>
