separate css style

--- a/profiles/templates/profiles/profile_settings.html
+++ b/profiles/templates/profiles/profile_settings.html
@@ -4,6 +4,7 @@
 {% block meta_title %}Личный кабинет{% endblock %}
 {% block extra_css %}
 {{ block.super }}
+<link rel="stylesheet" href="{% static 'css/table_responsive.css' %}">
 <link rel="stylesheet" href="{% static 'css/jquery.flexdatalist.css' %}">
 {% endblock %}
 
