--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{% static 'css/green.css' %}">
   <link rel="stylesheet" href="{% static 'css/mega_dropdown.css' %}">
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-  <link rel="stylesheet" href="{% static 'css/table_responsive.css' %}">
+  {# <link rel="stylesheet" href="{% static 'css/table_responsive.css' %}"> #}
   <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js' %}"></script>
 <![endif]-->
