--- a/shops/templates/shops/cart.html
+++ b/shops/templates/shops/cart.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load mezzanine_tags pages_tags staticfiles theme_tags crispy_forms_tags %}
 {% block meta_title %} Корзина {% endblock %}
+{% block extra_css %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'css/table_responsive.css' %}">
+{% endblock %}
 {% block breadcrumbs_title %}<h2>Корзина</h2>{% endblock breadcrumbs_title %}
 {% block breadcrumb_element %}<li>Корзина</li>{% endblock %}
 
