Additional fixes in profile_settings.html

--- a/ordertable/templates/ordertable/ordertableitem_form.html
+++ b/ordertable/templates/ordertable/ordertableitem_form.html
@@ -28,7 +28,7 @@
       <div class="sixteen columns">
         <div class="formset-images">
           <div class="header">
-            <h1>{% if object %}{{ object.title|capfirst }}{% else %}Новый товар{% endif %} <a href="#"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i> Советы по заполнению карточки заявки</a></h1>
+            <h1>{% if object %}{{ object.title|capfirst }}{% else %}Новая заявка{% endif %} <a href="#"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i> Советы по заполнению карточки заявки</a></h1>
           </div>
           <p> Фотографии — это самая важная часть в вашем будущем магазине. Покупатели не смогут потрогать, примерить или рассмотреть поближе ваши товары. Всё, что у них есть, — это изображения вашей вещи. Помните об этом, когда отбираете фотографии для магазина. </p>
           <div class="image-row">
