--- a/shops/templates/shops/shop_form.html
+++ b/shops/templates/shops/shop_form.html
@@ -121,10 +121,11 @@
     </div>
   </div>
   <div class="sixteen columns">
-      <input type="submit" class="button" value="Сохранить"/>
+      <input type="submit" class="button pull-right" value="Сохранить"/>
   </div>
 </div>
 </form>
+<div class="margin-bottom-50"></div>
 {% endblock %}
 
 
