--- a/shops/templates/shops/background_field.html
+++ b/shops/templates/shops/background_field.html
@@ -1,6 +1,5 @@
 {% load mezzanine_tags i18n %}
-<input id="{{ final_attrs.id }}" type="text" class="vFileBrowseField {{ final_attrs.class }}" name="{{ final_attrs.name }}" value="{{ value }}"
-style="display: none;" />
+<input id="{{ final_attrs.id }}" type="text" class="vFileBrowseField {{ final_attrs.class }}" name="{{ final_attrs.name }}" value="{{ value }}" style="display: none;" />
 <a href="javascript:FileBrowser.show('{{ final_attrs.id }}', '{% url "fb_browse" %}?pop=1{% if final_attrs.directory %}&amp;dir={{ final_attrs.directory }}{% endif %}{% if final_attrs.format %}&amp;type={{ final_attrs.format }}{% endif %}&amp;width=1290&amp;height=200');" class="shop-background-image">
   Добавить обложку
 </a>
