--- a/theme/templates/blog/blogpost_image_field.html
+++ b/theme/templates/blog/blogpost_image_field.html
@@ -1,10 +1,8 @@
 {% load mezzanine_tags i18n %}
 
-<input id="{{ final_attrs.id }}" type="text" class="vFileBrowseField {{ final_attrs.class }}" name="{{ final_attrs.name }}" value="{{ value }}" style="display: none; "/>
+<input id="{{ final_attrs.id }}" type="text" class="vFileBrowseField {{ final_attrs.class }}" name="{{ final_attrs.name }}" value="{{ value }}" style="display: none;" />
 
-<a href="javascript:FileBrowser.show('{{ final_attrs.id }}', '{% url "fb_browse" %}?pop=1{% if final_attrs.directory %}&amp;dir={{ final_attrs.directory }}{% endif %}{% if final_attrs.format %}&amp;type={{ final_attrs.format }}{% endif %}');"
-id="background_{{ final_attrs.id }}"
-class="blogpost-image-input"
+<a href="javascript:FileBrowser.show('{{ final_attrs.id }}', '{% url "fb_browse" %}?pop=1{% if final_attrs.directory %}&amp;dir={{ final_attrs.directory }}{% endif %}{% if final_attrs.format %}&amp;type={{ final_attrs.format }}{% endif %}&amp;width=1290&amp;height=200');" id="background_{{ final_attrs.id }}" class="blogpost-image-input"
 {% ifequal value.filetype "Image" %}
 style="background-image: url('{{ MEDIA_URL }}{% thumbnail value.name 1290 200 %}'); border: none;"
 > &nbsp; </a>
@@ -13,7 +11,7 @@ style="background-image: url('{{ MEDIA_URL }}{% thumbnail value.name 1290 200 %}
 {% endifequal %}
 
 {% if not self.is_required %}
-        <a href="javascript:FileBrowser.clear('{{ final_attrs.id }}');" class="clear-button" id="clear_{{ final_attrs.id }}" style="display:{% if value %}block{% else %}none{% endif %};">
+  <a href="javascript:FileBrowser.clear('{{ final_attrs.id }}');" class="clear-button" id="clear_{{ final_attrs.id }}" style="display:{% if value %}block{% else %}none{% endif %};">
           <i class="fa fa-trash-o" aria-hidden="true"></i> Удалить
         </a>
 {% endif %}
